--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,16 @@
 spring:
   datasource:
-    username: postgres
+    username: sa
     password: password
-    url: jdbc:postgres://localhost:5432/find-my-doc-db
+    url: jdbc:h2:file:./data/demo
     hikari:
       connection-timeout: 2000
       maximum-pool-size: 5
+    driver-class-name: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: true
