--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,27 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('testcontainersVersion', "1.16.2")
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor('org.projectlombok:lombok:1.18.24')
-    runtimeOnly 'com.h2database:h2'
+    testImplementation 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.testcontainers:postgresql'
+//    testImplementation 'org.testcontainers:junit-jupiter:1.17.1'
+}
+
+dependencyManagement {
+    imports{
+        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+    }
 }
 
 tasks.named('test') {
