--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,13 @@
 spring:
   datasource:
-    username: sa
+    username: postgres
     password: password
-    url: jdbc:h2:file:./data/demo
+    url: jdbc:postgresql://localhost:5432/find-my-doc-db
     hikari:
       connection-timeout: 2000
       maximum-pool-size: 5
-    driver-class-name: org.h2.Driver
+    driver-class-name: org.postgresql.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create-drop
-  h2:
-    console:
-      enabled: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    hibernate:
+#      ddl-auto: create
