Add data setup API

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.projectlombok:lombok:1.18.24'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     annotationProcessor('org.projectlombok:lombok:1.18.24')
     testImplementation 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
