--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.springframework.boot' version '2.6.7'
+    id "me.champeau.jmh" version "0.6.6"
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -28,6 +29,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    testImplementation 'org.testcontainers:postgresql'
 //    testImplementation 'org.testcontainers:junit-jupiter:1.17.1'
+    jmh 'org.openjdk.jmh:jmh-core:1.35'
+    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
+    jmhAnnotationProcessor('org.openjdk.jmh:jmh-generator-annprocess:1.35')
 }
 
 dependencyManagement {
