--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    // https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-micrometer
+    implementation 'org.hibernate.orm:hibernate-micrometer:6.0.1.Final'
+
     annotationProcessor('org.projectlombok:lombok:1.18.24')
     testImplementation 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
