--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 
 server:
   tomcat:
-    connection-timeout: 10s
+    connection-timeout: 2s
     keep-alive-timeout: 15s
     threads:
       max: 25
@@ -17,6 +17,9 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    properties:
+#      hibernate:
+#        generate_statistics: true
 #    hibernate:
 management:
   endpoints:
